# teams-lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: build.yml  ci.yml
.opencode/plugin/: session-worktree.ts
examples/: broker_token.rs
src/: auth.rs  gitlab.rs  lib.rs  main.rs  retry.rs  store.rs  teams.rs  teams_activity.rs  teams_avatars.rs  teams_media.rs  teams_profiles.rs  teams_read.rs  teams_readstate.rs  teams_send.rs  trouter.rs  trouter_events.rs  ui.rs  update.rs
ui/: .gitignore  build.ts  package.json  tsconfig.json
ui/src/: app.tsx  border.tsx  bubble.test.tsx  client.ts  composer.test.tsx  dialog-select.test.tsx  dialog-select.tsx  embedded-server.ts  embedded-web.ts  index.tsx  integration.test.tsx  message-actions.test.tsx  message-actions.tsx  message-composer.test.tsx  message-content.test.ts  message-content.ts  message-history.test.ts  message-history.ts  message-scroll.test.ts  mouse.test.tsx  notify.test.ts  notify.ts  open.test.ts  palette.test.tsx  reconnect.test.ts  render.test.tsx  server.test.ts  server.ts  settings.tsx  singleflight.test.ts  singleflight.ts  spinner.tsx  splash.test.tsx  splash.tsx  typing.test.tsx  web-embed.ts  web.ts
web/: .gitignore  package.json  playwright.config.ts  server.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/e2e/: app.spec.ts  appearance.spec.ts  call-events.spec.ts  channels.spec.ts  conversations.spec.ts  edit-message.spec.ts  gitlab-links.spec.ts  helpers.ts  history.spec.ts  keyboard.spec.ts  live.spec.ts  media.spec.ts  (+9 more)
(+68 files in other folders)
